# beat-studio-importer

./: README.md  beat-studio-importer.py  mypy.ini  pyproject.toml  pyrightconfig.json
beat_studio_importer/: __init__.py  __main__.py  arg_summary.py  basis.py  beat_studio_note_name.py  beat_studio_pattern.py  beat_studio_tempo.py  beat_studio_util.py  beat_studio_velocity.py  constants.py  custom_formatter.py  descriptor.py  events.py  features.py  grid.py  import_command.py  import_ui.py  info_command.py  merge.py  midi_note_name.py  midi_note_name_map.py  midi_source.py  midi_types.py  midi_util.py  misc.py  note.py  note_name.py  note_name_map.py  note_value.py  open_interval.py  play_command.py  pulse.py  quantize_util.py  region.py  region2.py  region_builder.py  remap_command.py  scaling.py  table.py  tempo_util.py  (+8 more)
note-maps/: general-midi-drums.notemap
samples/: example-0.mid  example-1.mid  example-2.mid  example-3.mid  seven-eight-remapped.mid  seven-eight.mid
samples/0.3.3-alpha/: Demo_Basic_Rock.mid  Demo_Easy_beat.mid  Demo_Fill.mid  Demo_Groove.mid  Demo_Just_hihat.mid  README.md
samples/reaper/: samples.rpp  smf-type-1.mid
tests/: test_beat_studio_velocity.py  test_midi_note_name_map.py  test_note_name_map.py  test_note_value.py  test_open_interval.py  test_pulse.py  test_quantize_util.py  test_region.py  test_scaling.py  test_time_signature.py  test_util.py  util.py
typings/mido/: __init__.pyi  frozen.pyi  parser.pyi  ports.pyi  sockets.pyi  syx.pyi  tokenizer.pyi
typings/mido/backends/: backend.pyi
typings/mido/messages/: __init__.pyi  (+6 more)
(+5 files in other folders)
