[project]
dependencies = [
  "colorama",
  "mido[ports-rtmidi]",
  "pyyaml",
]
dynamic = ["version"]
name = "beat-studio-importer"

[project.optional-dependencies]
dev = [
  "basedpyright",
  "mypy",
  "pytest",
  "types-colorama",
  "types-pyyaml",
]

[tool.setuptools]
py-modules = [
  "beat_studio_importer",
]
